Some fixes for 1.19.2